# Encryption

./: .gitignore  README.md
arduino/: README.md
arduino/MiniEncryptDemo/: MiniEncryptDemo.ino  embedded_package_blob.h  he_allocator.cpp  he_allocator.h  he_embedded_package.cpp  mini_ckks_client.cpp  mini_ckks_client.h
docs/: CHAIN_GROWTH_LOG.md  ESP32_CKKS_SEAL_DESIGN.md  HARDWARE_TEST_FLOW.md  IMPLEMENTATION_PROGRESS.md  MINI_CLIENT_FORMATS.md  NEXT_PHASE_VECTOR_RNS_EVAL_KEYS.md  PARAMETER_FEASIBILITY_4K_8K.md
esp32_client/: README.md
esp32_client/examples/BundleInspector/: BundleInspector.ino  bundle_blob_example.h
esp32_client/examples/MiniEncryptDemo/: MiniEncryptDemo.ino  embedded_package_blob.h
esp32_client/src/: he_bundle_format.cpp  he_bundle_format.h  he_embedded_package.cpp  he_embedded_package.h  he_memory_plan.cpp  he_memory_plan.h  mini_ckks_client.cpp
pc_tools/: CMakeLists.txt  README.md
pc_tools/include/: he_bundle.hpp
pc_tools/scripts/: bin_to_c_array.py  generate_test_vector.sh
pc_tools/serial/: capture_esp_ciphertext.py
pc_tools/src/: he_bundle.cpp  he_tool.cpp
